tf_test/app-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-app-demo1
  labels:
    app: alb-app-demo1
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alb-app-demo1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: alb-app-demo1
        version: v1
    spec:
      containers:
        - name: alb-app-demo1
          image: cr.yandex/crpc8jkq8ef0862s1k1b/lab-demo2:v1
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /_healthz
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: alb-app-demo1
spec:
  selector:
    app: alb-app-demo1
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-app-demo2
  labels:
    app: alb-app-demo2
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alb-app-demo2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: alb-app-demo2
        version: v1
    spec:
      containers:
        - name: alb-app-demo2
          image: cr.yandex/crpc8jkq8ef0862s1k1b/lab-demo2:v1
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /_healthz
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: alb-app-demo2
spec:
  selector:
    app: alb-app-demo2
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30082
